# aiserv

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml  config.default.json
api/src/: main.rs  openai_routes.rs  prompt.rs  routes.rs  tools.rs  types.rs  utils.rs
shurbai/: Cargo.toml
shurbai/src/: embeddings.rs  grammar.rs  lib.rs  types.rs
tests/: openai.py
