[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.1"
serde_json = "1.0"
shurbai = { path = "../shurbai" }
futures = "0.3.30"
tokio-stream = "0.1.14"
axum-streams = { version = "0.12", features=["json", "text"] }
